--- a/.github/workflows/Test, build and release.yml
+++ b/.github/workflows/Test, build and release.yml
@@ -25,7 +25,7 @@ jobs:
             wget https://www.python.org/ftp/python/3.10.14/Python-3.10.14.tar.xz
             tar -xf Python-3.10.14.tar.xz
             cd Python-3.10.14
-            sudo upt-get update
+            sudo apt-get update
             sudo apt-get install -y build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev wget libbz2-dev --fix-missing
             ./configure --enable-optimizations
             make -j$(nproc)
