--- a/.github/workflows/Test, build and release.yml
+++ b/.github/workflows/Test, build and release.yml
@@ -13,24 +13,23 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check Python version
+        id: check_version
         run: |
           PYTHON_VERSION=$(python --version | cut -d' ' -f2)
-          if [[ $PYTHON_VERSION < "3.10.14" ]]; then echo "Need to update Python!"; fi
+          echo "PYTHON_VERSION=$PYTHON_VERSION" >> $GITHUB_ENV
+          if [[ $PYTHON_VERSION < "3.10.14" ]]; then echo "UPDATE_PYTHON=true" >> $GITHUB_ENV; else echo "UPDATE_PYTHON=false" >> $GITHUB_ENV; fi
 
       - name: Update Python if needed
-        if: ${{ success() }}
+        if: ${{ env.UPDATE_PYTHON == 'true' }}
         run: |
-          PYTHON_VERSION=$(python --version | cut -d' ' -f2)
-          if [[ $PYTHON_VERSION < "3.10.14" ]]; then
-            wget https://www.python.org/ftp/python/3.10.14/Python-3.10.14.tar.xz
-            tar -xf Python-3.10.14.tar.xz
-            cd Python-3.10.14
-            sudo apt-get update
-            sudo apt-get install -y build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev wget libbz2-dev --fix-missing
-            ./configure --enable-optimizations
-            make -j$(nproc)
-            sudo make altinstall
-          fi
+          wget https://www.python.org/ftp/python/3.10.14/Python-3.10.14.tar.xz
+          tar -xf Python-3.10.14.tar.xz
+          cd Python-3.10.14
+          sudo apt-get update
+          sudo apt-get install -y build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev wget libbz2-dev --fix-missing
+          ./configure --enable-optimizations
+          make -j$(nproc)
+          sudo make altinstall
 
       - name: Download Django 5.0.4
         run: python -m pip install Django==5.0.4
