--- a/.github/workflows/Test, build and release.yml
+++ b/.github/workflows/Test, build and release.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Print Python version
+        run: python --version
+
       - name: Check Python version
         id: check_version
         run: |
