--- a/.github/workflows/Python CI-CD.yml
+++ b/.github/workflows/Python CI-CD.yml
@@ -1,10 +1,5 @@
-name: Python CI/CD
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+name: Python CI-CD
+on: [push]
 
 jobs:
   build:
