--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cloud_network_service
+  name: CloudNetworkService_HF
 spec:
   type: LoadBalancer
   ports:
@@ -10,4 +10,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: cloud_network_service
+    app: CloudNetworkService_HF
